Fix floated image alignment

--- a/assets/css/base/gutenberg-blocks.scss
+++ b/assets/css/base/gutenberg-blocks.scss
@@ -306,14 +306,16 @@
 
 	// Image
 	.wp-block-image {
-		margin-bottom: ms(2);
+		figure {
+			margin-bottom: ms(2);
+		}
 
 		.alignleft {
-			margin-right: ms(1);
+			margin-right: ms(2);
 		}
 
 		.alignright {
-			margin-left: ms(1);
+			margin-left: ms(2);
 		}
 
 		figcaption {
@@ -324,6 +326,15 @@
 		}
 	}
 
+	figure.wp-block-image {
+		margin: 0 0 ms(2);
+	}
+
+	div.wp-block-image {
+		display: inline;
+	}
+
+	// Cover
 	.wp-block-cover {
 		flex-flow: row wrap;
 		min-height: 350px;
